# cartlet

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  Makefile  README.md  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml  publish.yml
benchmarks/: __init__.py  runner_throughput.py
cartlet/: __init__.py  base.py  cli.py  evaluation.py  forest.py  isolation.py  runner.py  tree.py  types.py  utils.py  xgboost.py
cartlet/bundled/: predict.py
cartlet/io/: __init__.py  bytes.py  cart_format.py  loader.py  utils.py  writer.py
cartlet/trainer/: __init__.py  base.py  native.py  sklearn.py
docs/: cart_format.md  runners.md
examples/: __init__.py  breast_cancer_binary.py  common.py  diabetes_regression.py  iris_decision_tree.py  iris_runner_deploy.py  wine_random_forest.py
tests/: test_algorithms.py  test_backend_parity.py  test_bytes_format.py  test_cli.py  test_decision_tree.py  test_edge_cases.py  test_evaluation.py  test_examples.py  test_forest.py  test_io.py  test_model_formats.py  test_native_perf_smoke.py  test_public_data.py  test_runner_parity.py  test_runner_perf_smoke.py  test_runners.py  test_sklearn_parity.py  test_tree_utils.py  test_xgboost.py
